# oop

./: .gitignore
Lab1/Lab1/: CMakeLists.txt  main.cpp  replace.cpp  stream_processor.h
Lab1/Lab1/tests/expected/: expected10.txt  expected6.txt
Lab1/Lab1/tests/input/: input10.txt
Lab1/Lab1/tests/output/: output10.txt
Lab1/Live/: CMakeLists.txt
Lab1/Live/src/: life.cpp  life.h  main.cpp
Lab1/Live/tests/: test_life.cpp
Lab1/crypt/: crypt.slnx
Lab1/crypt/crypt/: cipher.cpp  cipher.h  crypt.cpp  crypt.vcxproj  crypt.vcxproj.filters  run_tests.bat
Lab1/invert/: invert.slnx
Lab1/invert/invert/: invert.cpp  invert.vcxproj  invert.vcxproj.filters  matrix.cpp  matrix.h  run_tests.bat
Lab1/invert/invert/tests/: create_tests.ps1  run_tests.bat
Lab1/radix/radix/: .clang-format  radix.slnx
Lab1/radix/radix/radix/: main.cpp  radix.cpp  radix.h  radix.md  radix.vcxproj  radix.vcxproj.filters  run_tests.bat
Lab1/replace/: CMakeLists.txt  replace.slnx  run_tests.bat
Lab1/replace/Lab1/: replace.h  stream_processor.cpp  test.bat
Lab1/replace/replace/: ArgsParser.cpp  ArgsParser.h  StreamProcessor.cpp  StreamProcessor.h  StringUtils.cpp  StringUtils.h  main.cpp  replace.cpp  replace.h  replace.vcxproj  replace.vcxproj.filters  run_tests.bat  stream_processor.cpp  task.md
Lab1/replace/replace/tests/: run_tests.bat
Lab2/HTML Decode/: CMakeLists.txt  HTML Decode.slnx
Lab2/HTML Decode/HTML Decode/: HTML Decode.cpp  HTML Decode.vcxproj  HTML Decode.vcxproj.filters
Lab2/HTML Decode/src/: CMakeLists.txt  HtmlDecode.cpp  HtmlDecode.h  html_decode.cpp  main.cpp
Lab2/HTML Decode/tests/: CMakeLists.txt  test_html_decode.cpp
Lab2/MiniDictionary/: CMakeLists.txt
Lab2/MiniDictionary/src/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  StringUtils.cpp  StringUtils.h  main.cpp
Lab2/MiniDictionary/tests/: CMakeLists.txt  DictionaryTests.cpp  StringUtilsTests.cpp
Lab2/PrimeNumberGenerator/: CMakeLists.txt
Lab2/PrimeNumberGenerator/src/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  PrimeGenerator.cpp  PrimeGenerator.h  main.cpp
Lab2/PrimeNumberGenerator/tests/: ArgsParserTests.cpp  CMakeLists.txt  PrimeGeneratorTests.cpp
Lab2/Task1/: CMakeLists.txt
Lab2/Task1/src/: CMakeLists.txt  main.cpp  numbers.cpp  numbers.h
Lab2/Task1/tests/: CMakeLists.txt  test_numbers.cpp
Lab2/UrlParser/: CMakeLists.txt
Lab2/UrlParser/src/: CMakeLists.txt  UrlParser.cpp  UrlParser.h  main.cpp
Lab2/UrlParser/tests/: CMakeLists.txt  UrlParserTests.cpp
Lab3/C#/CalculatorApp/: Calculator.slnx
Lab3/C#/CalculatorApp/Calculator/: Calculator.cs  Identifier.cs  Variable.cs
Lab3/C#/CalculatorApp/Calculator.Tests/: Calculator.Tests.csproj  CalculatorTests.cs  FunctionTests.cs  VariableTests.cs
Lab3/C#/CalculatorApp/CalculatorApp/: CalculatorApp.csproj  CommandHandler.cs  Program.cs
Lab3/C#/CarSimulator/: CarSimulator.sln  CarSimulator.slnx  class.puml  task.md
Lab3/C#/CarSimulator/Car/: Car.cs
Lab3/C#/CarSimulator/Car.Tests/: Car.Tests.csproj  CarExamplesTests.cs  CarInitializationTests.cs  DirectionTests.cs  EngineTests.cs  GearTests.cs  SpeedTests.cs  UnitTest1.cs
Lab3/C#/CarSimulator/CarApp/: CarApp.csproj  CommandHandler.cs  Program.cs
Lab3/C#/TVSet/TVSet/: Commands.txt  TVSet.sln  TVSet.slnx
Lab3/C++/The Economics Emulator/: CMakeLists.txt  task.md
Lab3/C++/The Economics Emulator/src/: Actor.cpp  Actor.h  Bank.cpp  Bank.h  CMakeLists.txt  Simulation.cpp  Simulation.h  main.cpp
Lab3/C++/The Economics Emulator/src/Actors/: Apu.cpp  Apu.h  Bart.cpp  Bart.h  Burns.cpp  Burns.h  Child.cpp  Child.h  Homer.cpp  Homer.h  Lisa.cpp  Lisa.h  Marge.cpp  Marge.h  Nelson.cpp  Nelson.h  Smithers.cpp  Smithers.h  Snake.cpp  Snake.h
Lab3/C++/The Economics Emulator/tests/: ActorTests.cpp  BankEdgeTests.cpp  BankTests.cpp  CMakeLists.txt  SimulationTests.cpp
Lab4/C#/: commands.txt
Lab4/C#/BodiesSolution/: .$BodiesClassDiagram.drawio.bkp  BodiesClassDiagram.drawio  BodiesSolution.slnx  task.md
Lab4/C#/BodiesSolution/Bodies.App/: Bodies.App.csproj  BodyPrinter.cs  BodyReader.cs  ConsoleInput.cs  Program.cs
Lab4/C#/BodiesSolution/Bodies.Tests/: Bodies.Tests.csproj  BodiesTest.cs  BodyUtilsTests.cs  CBodyCommonBehaviorTests.cs  (+7 more)
Lab4/C++/Lab4/: .$class-diagram-variant2.drawio.bkp  CMakeLists.txt  class-diagram-variant2.drawio  input-art.txt  run-and-open-svg.bat  structure.txt
Lab4/C++/Lab4/docs/superpowers/plans/: 2026-04-25-full-testing-of-all-modules-in-src.md
Lab4/C++/Lab4/src/: CMakeLists.txt  main.cpp
Lab4/C++/Lab4/src/app/: AppRunner.h  CShapeFactory.cpp  CShapeFactory.h  ShapeManager.cpp  ShapeManager.h
Lab4/C++/Lab4/src/canvas/: CCanvas.cpp  CCanvas.h  ICanvas.h  ICanvasDrawable.h
Lab4/C++/Lab4/src/shapes/: CCircle.cpp  CCircle.h  CLineSegment.cpp  CLineSegment.h  CPoint.h  CRectangle.cpp  CRectangle.h  CTriangle.cpp  CTriangle.h  IShape.h
Lab4/C++/Lab4/tests/: CMakeLists.txt
Lab4/C++/Lab4/tests/app/: CShapeFactoryTests.cpp  ShapeManagerTests.cpp
Lab4/C++/Lab4/tests/canvas/: CCanvasTests.cpp  ShapeDrawTests.cpp  ShapeManagerDrawOrderTests.cpp  TestCanvas.h
Lab4/C++/Lab4/tests/shapes/: CCircleTests.cpp  CLineSegmentTests.cpp  CRectangleTests.cpp  CTriangleTests.cpp
Lab5/c++/CDateTask/CDateProject/tests/: CDateAdditionTests.cpp  CDateBoundaryTests.cpp  CDateComparisonTests.cpp  CDateCompoundAssignmentTests.cpp  CDateCtorEquivalenceTests.cpp  CDateDefaultCtorTests.cpp  CDateDifferenceTests.cpp  CDateFreeAdditionTests.cpp  CDateGettersTests.cpp  CDateInputTests.cpp  CDateOutputTests.cpp  CDatePostfixTests.cpp  CDatePrefixTests.cpp  CDateSubtractionTests.cpp  CDateTests.cpp  CDateTimestampCtorTests.cpp  CDateWeekDayTests.cpp  CDateYmdCtorTests.cpp  CDateYmdCtorValidationTests.cpp  CMakeLists.txt
Lab5/task2/CMyStringTask/: .gitignore  CMakeLists.txt  task.md
Lab5/task2/CMyStringTask/src/: CMakeLists.txt  CMyString.cpp  CMyString.h
Lab5/task2/CMyStringTask/tests/: CMakeLists.txt  ComparisonTests.cpp  ConcatenationTests.cpp  ConstructorTests.cpp  CopyTests.cpp  MoveTests.cpp  StreamOperatorsTests.cpp  StringAccessTests.cpp  SubstringTests.cpp
(+117 files in other folders)
